--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <title>github mokymai</title>
 
-<body>pakeitimas</body>
+<body><div>pakeitimas</div>
+<div>dar vienip keitimai</div>
+</body>
 	</html>
