Modified index.html title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<title>github mokymai</title>
+<title>LinuxServer website server</title>
 
 <body><div>pakeitimas</div>
 <div>dar vienip keitimai</div>
+
 </body>
 	</html>
